nat_gateway.tf
resource "aws_eip" "nat_gateway_eip" {
  tags = {
    Name = "nat-gateway-eip"
  }
}

resource "aws_nat_gateway" "nat_gateway" {
  allocation_id = aws_eip.nat_gateway_eip.id
  subnet_id     = aws_subnet.public_subnet.id #Ensure this is not should be vpc

  tags = {
    Name = "nat-gateway"
  }
}
